Fix alignment for long filter names (#3635)

--- a/apps/desktop/src/scss/left-nav.scss
+++ b/apps/desktop/src/scss/left-nav.scss
@@ -154,6 +154,10 @@
     margin-left: auto;
     margin-right: 5px;
   }
+
+  .filter-button {
+    white-space: nowrap;
+  }
 }
 
 .nav {
